<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <FrameLayout
        android:id="@+id/picture_of_day_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/picture_of_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAsteroidsByDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_border"
        android:text="@string/button_asteroids_by_date"
        android:textColor="@color/default_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture_of_day_container" />

    <Button
        android:id="@+id/buttonWhatAsteroid"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:text="@string/button_what_asteroid"
        android:textColor="@color/default_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAsteroidsByDate" />

    <Button
        android:id="@+id/buttonDiscovery"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:text="@string/button_discovery"
        android:textColor="@color/default_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonWhatAsteroid" />

    <Button
        android:id="@+id/buttonAboutApp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:text="@string/text_view_aboutapp_title"
        android:textColor="@color/default_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonDiscovery" />

</androidx.constraintlayout.widget.ConstraintLayout>