<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLogoIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/radar_animation"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewAboutApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_aboutapp_title"
        android:textColor="@color/text_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieLogoIcon" />

    <TextView
        android:id="@+id/textViewAboutappDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/text_view_aboutapp_description"
        android:textColor="@color/default_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutApp" />

    <TextView
        android:id="@+id/textViewAboutappUseInstruments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/default_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutappDescription"
        android:padding="20dp"
        android:text="@string/text_view_aboutapp_use_instruments"/>

</androidx.constraintlayout.widget.ConstraintLayout>